scans and pass check

--- a/Views/Account/AdminLogin.cshtml
+++ b/Views/Account/AdminLogin.cshtml
@@ -10,8 +10,16 @@
                     <h2 class="mb-0">Login</h2>
                 </div>
                 <div class="card-body">
+
 <form asp-action="LoginAdmin" method="post">
+
     <div class="form-group">
+                            @if (ViewBag.Error != null)
+                            {
+                                <div class="alert alert-danger">
+                                    @ViewBag.Error
+                                </div>
+                            }
         <label>Username</label>
         <input type="text" name="username" class="form-control" required />
     </div>
