--- a/Views/Account/PatientLogin.cshtml
+++ b/Views/Account/PatientLogin.cshtml
@@ -11,6 +11,12 @@
                     <h3>Patient Login</h3>
                 </div>
                 <div class="card-body">
+                    @if (ViewBag.Error != null)
+                    {
+                        <div class="alert alert-danger">
+                            @ViewBag.Error
+                        </div>
+                    }
                     <form asp-action="LoginPatient" method="post">
                         <div class="form-group">
                             <label for="username">Username</label>
