--- a/Views/Doctor/Profile.cshtml
+++ b/Views/Doctor/Profile.cshtml
@@ -16,6 +16,7 @@
                 <input type="hidden" asp-for="Username" />
                 <input type="hidden" asp-for="Password" />
                 <input type="hidden" asp-for="Role" />
+                <input type="hidden" asp-for="IsAvailable" />
 
                 <div class="row">
                     <div class="col-md-8 mx-auto">
